* LinkDialog did not apply target attribute correctly * LinkDialog did not update anchor correctly after setting reset * Fixed various dialog layout issues

--- a/src/styles/sm/summernote-sm.scss
+++ b/src/styles/sm/summernote-sm.scss
@@ -370,7 +370,7 @@ body {
     margin: 0;
   }
 
-  .modal-footer>.note-btn-primary {
+  .modal-footer>.btn {
     min-width: 80px;
   }
 }
@@ -656,10 +656,6 @@ body {
   >svg {
     height: 16px;
   }
-
-  // &:not(:hover) {
-  //   //transition: none !important;
-  // }
 
   &:active,
   .note-btn-group.show > & {
